--- a/nimbus/schedules/templates/base_schedules.html
+++ b/nimbus/schedules/templates/base_schedules.html
@@ -49,7 +49,7 @@ label{display: block;}
             <ul class="sidemenu">
                 <li><a href="#mensal" class="monthly active">Mensal</a></li>
                 <li><a href="#semanal" class="weekly">Semanal</a></li>
-                <li><a href="#diario" class="dayly">Diário</a></li>
+                <li><a href="#diario" class="daily">Diário</a></li>
                 <li><a href="#minuto" class="hourly">Minuto</a></li>
             </ul>
             <p>Agende a execução deste backup, é possível ativar mais de um agendamento.</p>
