--- a/nimbus/schedules/templates/add_schedule.html
+++ b/nimbus/schedules/templates/add_schedule.html
@@ -174,6 +174,11 @@ td{padding: 50px;}
                 <!-- <input type="button" class="use_it submit" value="Usar" /><input type="button" class="use_and_save_it submit" value="Salvar como modelo" /> -->
             </p>
         </div>
+        <input type="hidden" name="computer_id" value="{{computer_id}}"/>
+        <input type="hidden" name="fileset_id" value="{{fileset_id}}"/>
+        <input type="hidden" name="storage_id" value="{{storage_id}}"/>
+        <input type="hidden" name="retention_time" value="{{retention_time}}"/>
+        <input type="hidden" name="procedure_name" value="{{procedure_name}}"/>
         </form>
     </div>		<!-- .block_content ends -->
 
