Correções na interface

--- a/nimbus/procedures/templates/add_procedure.html
+++ b/nimbus/procedures/templates/add_procedure.html
@@ -60,7 +60,7 @@
             {% endfor %}
         {% endfor %}
         <div class="pool_value">
-	        <label>Tempo de retencao (em dias):</label> <label id="slider_value"></label><br />
+	        <label>Tempo de retencao: <label id="slider_value"></label> dias</label> <label id="slider_value"></label><br />
 	        <div id="slider"></div>
 	        <div class="add_new_pool"><a href="#">Adicionar Outro Valor</a></div>
 	        <div class="clear">&nbsp;</div>
