--- a/nimbus/procedures/templates/edit_procedure.html
+++ b/nimbus/procedures/templates/edit_procedure.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
 
 {% block headtags %}
+<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
 <link type="text/css" rel="stylesheet" href="/media/css/backup.css"/>
 <link rel="stylesheet" type="text/css" href="/media/css/schedules.css" />
+<script type="text/javascript" src="/media/js/backup.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
 
-<!-- <script type="text/javascript" src="/media/js/backup.js"></script> -->
 <!-- <script type="text/javascript" src="/media/lib/js/tree_plugin.js"></script> -->
 
 {% endblock %}
@@ -42,6 +44,17 @@
                 {{ hidden }}
             {% endfor %}
         {% endfor %}
+        <div class="pool_value">
+	        <label>Tempo de retencao: <label id="slider_value"></label> dias</label> <label id="slider_value"></label><br />
+	        <div id="slider"></div>
+	        <div class="add_new_pool"><a href="#">Adicionar Outro Valor</a></div>
+	        <div class="clear">&nbsp;</div>
+	    </div>
+	    <div class="pool_new_value">
+	    	<label>Tempo de retencao (em dias):</label><br />
+	        <input type="text" name="pool_retention_alt" id="pool_retention_alt" value="" class="text small" /><br />
+	    </div>
+	    <hr />
         <p>
             <input type="submit" class="submit small" value="Salvar" /> <a href="/procedures/list" class="submit small">Cancelar</a>
         </p>
