--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" type="text/css" href="/media/lib/css/facebox.css" />
 	<link rel="stylesheet" type="text/css" href="/media/js/iphone-style-checkboxes/style.css" />
 	<link rel="stylesheet" type="text/css" href="/media/js/progressbar/jquery.ui.all.css" />
+	<link rel="stylesheet" type="text/css" href="/media/lib/css/uniform.default.css" />
 	
 	
 	<script type="text/javascript" src="/media/lib/js/jquery.js"></script>
@@ -30,6 +31,7 @@
 	<script src="/media/js/progressbar/jquery.ui.widget.min.js" type="text/javascript"></script>	
 	<script src="/media/js/progressbar/jquery.ui.progressbar.min.js" type="text/javascript"></script>
 	<script src="/media/js/jquery.maskedinput-1.2.2.min.js" type="text/javascript"></script>
+	<script src="/media/lib/js/jquery.uniform.js" type="text/javascript"></script>
 	
 	{% block headtags %}{% endblock %}
 	
