--- a/nimbus/remotestorages/templates/remotestorages_list.html
+++ b/nimbus/remotestorages/templates/remotestorages_list.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 
 {% block headtags %}
+<script type="text/javascript" src="/media/lib/js/jquery.jqplot.js"></script>
+<script type="text/javascript" src="/media/lib/js/jqplotplugins/jqplot.pieRenderer.min.js"></script>
+<script type="text/javascript" src="/media/lib/js/jqplotplugins/jqplot.donutRenderer.min.js"></script>
 <script type="text/javascript" src="/media/js/remotestorages.js"></script>
 <link rel="stylesheet" type="text/css" href="/media/css/remotestorages.css" />
 
@@ -19,7 +22,7 @@
     <div class="block_content">
         
         <div class="clear"></div>
-        <p></p>
+        <div id="chart1"></div>
     </div>
 
     <div class="bendl"></div>
