Apontando links para os lugares certos

--- a/nimbus/procedures/templates/edit_procedure.html
+++ b/nimbus/procedures/templates/edit_procedure.html
@@ -33,10 +33,10 @@
                 <p><label>{{ field.label }}:</label><br />
                     {{ field }}
                     {% if field.label == 'Schedule' %}
-                        ou modifique o atual: <a href="/schedules/{{schedule.id}}/edit" class="side_link schedules">[{{schedule.name}}]</a>
+                        ou modifique o atual: <a href="/schedules/{{schedule.id}}/edit">[{{schedule.name}}]</a>
                     {% endif %}
                     {% if field.label == 'Fileset' %}
-                        ou modifique o atual: <a href="/filesets/{{fileset.id}}/edit" class="side_link filesets">[{{fileset.name}}]</a>
+                        ou modifique o atual: <a href="/filesets/{{fileset.id}}/edit/{{procedure.computer.id}}">[{{fileset.name}}]</a>
                     {% endif %}
                 </p>
             {% endfor %}
