--- a/nimbus/media/lib/css/style.css
+++ b/nimbus/media/lib/css/style.css
@@ -474,7 +474,7 @@ a:hover {
 	text-align: left;
 	margin-bottom: 15px;
 	}
-	
+.block table tr th {text-align: center;}
 .block table tr td,
 .block table tr th {
 	border-bottom: 1px solid #ddd;
@@ -570,7 +570,15 @@ a:hover {
 	border-bottom: 1px solid #ddd;
 	margin-bottom: 15px;
 	}
-	
+
+/* Alignment */
+
+.block .al-left{text-align: left;}
+.block .al-center{text-align: center;}
+.block .al-right{text-align: right;}
+
+.block .half{width: 49%; margin-right: 0; display: block; float: left;}
+.block .last{margin-right: 0; float: right;}
 	
 /* Messages */
 
@@ -1410,4 +1418,50 @@ a.submit:hover {
 .floatright {float: right;}
 .hidden { display: none; }
 
-/*  */
+/* minibutton */
+/* button basics */
+  a.minibutton {
+    display:inline-block;
+    height:23px;
+    padding:0 0 0 3px;
+    font-size:11px;
+    font-weight:bold;
+    color:#333;
+    text-shadow:1px 1px 0 #fff; 
+    background:url(http://github.com/images/modules/buttons/minibutton_matrix.png) 0 0 no-repeat;
+    white-space:nowrap;
+    border:none;
+    overflow:visible;
+    cursor:pointer;
+    text-decoration:none;
+  }
+  
+  a.minibutton>span {
+    display:block;
+    height:23px;
+    padding:0 10px 0 8px;
+    line-height:23px;
+    background:url(http://github.com/images/modules/buttons/minibutton_matrix.png) 100% 0 no-repeat;
+  }
+  
+  a.minibutton:hover, a.minibutton:focus {
+    color:#fff;
+    text-decoration:none;
+    text-shadow:-1px -1px 0 rgba(0,0,0,0.3);
+    background-position:0 -30px;
+  }
+  a.minibutton:hover>span, a.minibutton:focus>span {background-position:100% -30px;}
+  
+  a.minibutton.mousedown{background-position:0 -60px; }
+  a.minibutton.mousedown>span{background-position:100% -60px; }
+  
+  /* with icon */
+  a.btn-download .icon {
+    float:left;
+    margin-left:-4px;
+    width:18px;
+    height:22px;
+    background:url(http://github.com/images/modules/buttons/minibutton_icons.png?v20100306) 0 0 no-repeat;
+  }
+  a.btn-download .icon {background-position:-40px 0;}
+  a.btn-download:hover .icon, a.btn-download:focus .icon {background-position:-40px -25px;}
