--- a/nimbus/remotestorages/templates/remotestorages_list.html
+++ b/nimbus/remotestorages/templates/remotestorages_list.html
@@ -3,9 +3,9 @@
 {% block headtags %}
 <script type="text/javascript" src="/media/lib/js/jquery.jqplot.js"></script>
 <script type="text/javascript" src="/media/lib/js/jqplotplugins/jqplot.pieRenderer.min.js"></script>
-<script type="text/javascript" src="/media/lib/js/jqplotplugins/jqplot.donutRenderer.min.js"></script>
 <script type="text/javascript" src="/media/js/remotestorages.js"></script>
 <link rel="stylesheet" type="text/css" href="/media/css/remotestorages.css" />
+<link rel="stylesheet" type="text/css" href="/media/lib/css/jquery.jqplot.css" />
 
 {% endblock %}
 
@@ -20,9 +20,32 @@
 	</div>
 
     <div class="block_content">
-        
         <div class="clear"></div>
-        <div id="chart1"></div>
+        <div id="chart1" class="half"></div>
+        <div class="half last">
+        <table cellpadding="0" cellspacing="0" style="width: 100%;">
+            <thead>
+            <tr>
+                <th>Nome</th>
+                <th>Endere&ccedil;o</th>
+                <th>&Uacute;tima Atividade</th>
+                <th>Ativo</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for row in num_rows %}
+            <tr>
+                <td><a href="#">Storage 01</a></td>
+                <td>192.168.50.21</td>
+                <td>S&aacute;bado, 4 de maio de 2011</td>
+                <td><img src="/media/icons/ok.png" alt="Sim" /></td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+        <a href="#" class="minibutton"><span>Adicionar Storage</span></a>
+        </div>
+        <div class="clear"></div>
     </div>
 
     <div class="bendl"></div>
