--- a/nimbus/filesets/templates/edit_fileset.html
+++ b/nimbus/filesets/templates/edit_fileset.html
@@ -3,6 +3,9 @@
 {% block headtags %}
 <script type="text/javascript" src="/media/lib/js/tree_plugin.js"></script>
 <script type="text/javascript" src="/media/js/filesets.js"></script>
+<script type="text/javascript">
+	NOT_ASYNC = true;
+</script>
 {% endblock %}
 
 {% block page %}
