--- a/nimbus/procedures/templates/add_procedure.html
+++ b/nimbus/procedures/templates/add_procedure.html
@@ -39,7 +39,7 @@
 						{% endif %}
                     {% else %}
 						{%if field.label == 'Fileset' %}
-	                        <a href="/filesets/add" class="filesets minibutton"><span>Criar um conjunto de arquivos</span></a>{{ field }}
+	                        <a href="/filesets/add/" class="filesets minibutton" id="fileset_button"><span>Criar um conjunto de arquivos</span></a>{{ field }}
                    		{% else %}
 				            {{ field }}
 						{% endif %}
