--- a/nimbus/filesets/templates/edit_fileset.html
+++ b/nimbus/filesets/templates/edit_fileset.html
@@ -3,9 +3,9 @@
 {% block headtags %}
 <script type="text/javascript" src="/media/lib/js/tree_plugin.js"></script>
 <script type="text/javascript" src="/media/js/filesets.js"></script>
-<script type="text/javascript">
+<!-- <script type="text/javascript">
 	NOT_ASYNC = true;
-</script>
+</script> -->
 {% endblock %}
 
 {% block page %}
@@ -16,7 +16,7 @@
 		<h2>{{ title }}</h2>
 	</div>		<!-- .block_head ends -->
 	<div class="block_content">
-        <form action="" method="post" id="main_form">
+        <form action="/filesets/{{ fileset.id }}/do_edit/" method="post" id="main_form">
 			<input type="hidden" value="{{ computer.id }}" id="computer_id" />
 			{{deletes_form.management_form}}
 			Remover arquivo atuais:
