--- a/nimbus/schedules/templates/edit_schedule.html
+++ b/nimbus/schedules/templates/edit_schedule.html
@@ -4,7 +4,7 @@
     
 <link rel="stylesheet" type="text/css" href="/media/css/schedules.css" />
 <link rel="stylesheet" type="text/css" href="/media/lib/css/style.css" />
-<script type="text/javascript" src="/media/js/backup.js"></script>
+<script type="text/javascript" src="/media/js/procedures.js"></script>
 <script type="text/javascript" src="/media/js/schedules.js"></script>
 <script type="text/javascript" src="/media/js/jquery-ui-1.7.2.custom.min.js"></script>
 <!-- <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script> -->
