--- a/nimbus/filesets/templates/edit_fileset.html
+++ b/nimbus/filesets/templates/edit_fileset.html
@@ -1,6 +1,7 @@
-{% extends "base.html" %}
+{% extends "base_async.html" %}
 
 {% block headtags %}
+<link rel="stylesheet" type="text/css" href="/media/css/filesets.css" media="screen" />
 <script type="text/javascript" src="/media/lib/js/tree_plugin.js"></script>
 <script type="text/javascript" src="/media/js/filesets.js"></script>
 <!-- <script type="text/javascript">
@@ -19,16 +20,18 @@
         <form action="/filesets/{{ fileset.id }}/do_edit/" method="post" id="main_form">
 			<input type="hidden" value="{{ computer.id }}" id="computer_id" />
 			{{deletes_form.management_form}}
-			Remover arquivo atuais:
+			<h2>Remover arquivo atuais:</h2>
 			<table>
 				<tr><th>Apagar</th><th>Arquivo</th></tr>
 				{% for form in deletes_form.forms %}
 					<tr><td>{{form.DELETE}}</td><td>{{form.path}}</td></tr>{{form.id}}{{form.fileset}}
 				{% endfor %}
 			</table>
-			Adicionar novos aquivos:
+			<hr />
+			<h2>Adicionar novos aquivos:</h2>
 			<ul class="tree"><li class="directory first"><span><a href="#" path="/">Arquivos</a></span></li></ul>
-            {{ fileset_form }}
+            {{ fileset_form.as_p }}
+			<hr />
 			<p>
 				<!-- <input type="submit" class="submit mid" id="submit_button" value="Salvar"/> -->
                 <input type="button" class="submit mid" id="submit_button" value="Salvar"/>
