--- a/nimbus/media/css/procedures.css
+++ b/nimbus/media/css/procedures.css
@@ -1,4 +1,5 @@
 .submit.tiny {
+    text-shadow: 0px 0px white;
     font-size: 11px;
     padding: 2px;
     width: 200px;
@@ -10,7 +11,7 @@
 }
 
 .procedure {
-    padding: 20px; -moz-border-radius: 5px; background: #EEE; margin-bottom: 20px;
+    padding: 0; -moz-border-radius: 5px; background: #fff; margin-bottom: 20px;
 }
 
 .procedure .left {
@@ -86,6 +87,34 @@
     -webkit-border-radius: 5px;
     padding: 10px;
     border: 1px solid #CCC;
+}
+
+.fileset {
+    border: 2px solid #498ab9;
+    padding: 0;
+    background: #fff;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+}
+
+.fileset .title{
+    background: #498ab9;
+    color: #fff;
+    padding: 5px 15px;
+}
+.fileset .title .name{
+    font-size: 16px;
+}
+.fileset .body{
+    padding: 3px 15px;
+}
+.half{display: block; width: 48%; float: left;}
+.right{text-align: right;}
+
+.list{
+    display: block;
+    height: 120px;
+    overflow: auto;
 }
 
 /* button basics */
