--- a/nimbus/procedures/templates/profile_list.html
+++ b/nimbus/procedures/templates/profile_list.html
@@ -20,7 +20,63 @@
 	</div>
 
     <div class="block_content">
-		FILESETS:
+		<h2>Filesets</h2>
+		<div class="procedure">
+			<div class="fileset">
+                <div class="title">
+			        <span class="name">Fileset 01</span> | <a class="minibutton" href="/filesets/1/edit/"><span>Editar</span></a> | Baseado em
+                    <select>
+                        {% for computer in computers %}
+                        <option>{{computer}}</option>
+                        {% endfor %}
+                    </select>
+                </div><!-- .title -->
+                <div class="body">
+                <div style="width: 350px; float: left;">
+                    <table cellpadding="0" cellpadding="0">
+                        <thead>
+                        <tr><th>Procedimento</th><th>Computador</th></tr>
+                        </thead>
+                        <tbody>
+                        {% for procedure in fileset.procedures.all %}
+                        <tr><td>{{procedure.name}}</td><td>{{procedure.computer}}</td></tr>
+                        {% endfor %}
+                        <tr><td>Procedimento tal</td><td>Computador 01</td></tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div style="width: 500px; float: right;">
+                    <h3>Lista de arquivos</h3>
+                    <div class="list">
+                    <ul>
+                        <li>illo quia voluptatem magni veritatis beatae </li>
+                        <li>ipsam doloremque fugit nemo inventore iste </li>
+                        <li>aut accusantium voluptatem quasi illo </li>
+                        <li>sed enim sit sunt sunt, illo </li>
+                        <li>dicta voluptatem vitae sunt voluptatem fugit </li>
+                        <li>voluptatem aspernatur omnis et dicta sit perspiciatis quia voluptatem </li>
+                        <li>ipsa fugit dicta sit unde explicabo inventore sed sit ipsam perspiciatis </li>
+                        <li>omnis unde aut vitae ipsa eaque sed </li>
+                        <li>dolores eos totam quae natus sit ab </li>
+                        <li>consequuntur omnis totam unde ratione beatae inventore </li>
+                        <li>quia sit vitae veritatis omnis sed sed quae veritatis quia unde eaque aperiam aperiam, sit voluptatem </li>
+                        <li>inventore qui quia beatae architecto quasi quae perspiciatis perspiciatis, aspernatur sed eos dolores consequuntur </li>
+                        <li>architecto fugit dolores aperiam aperiam, aut aspernatur ipsam aperiam dolores et perspiciatis aut et iste </li>
+                        <li>explicabo veritatis iste aut quasi quasi, laudantium illo natus aperiam dicta ab magni </li>
+                        <li>dicta aut voluptas sit perspiciatis perspiciatis magni et et architecto eos magni dolores dolores, sed </li>
+                    </ul>
+			
+                    <ul>
+                        {% for file in fileset.files.all %}
+                        <li>{{file.path}}</li>
+                        {% endfor %}
+                    </ul>
+                    </div>
+                </div>
+                <div class="clear"></div>
+                </div><!-- .body -->
+			</div><br/>
+		</div><br/>
 		<div class="tmp" // bloco com os filesets>
 			{% for fileset in filesets %}
 			<div class="tmp" //bloco de um fileset>
