FIX: Adição do título agendamento na lista

--- a/nimbus/procedures/templates/profile_list.html
+++ b/nimbus/procedures/templates/profile_list.html
@@ -129,7 +129,8 @@
 			<hr />
 			{% endfor %}
 		</div><!-- .procedure -->
-
+        
+        <h2>Agendamentos</h2>
         <!-- real env for schedules -->
 		<div class="schedule">
             {% for schedule in schedules %}
